--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@ buildscript {
   }
 }
 
+plugins {
+  id "com.jfrog.bintray" version "1.8.4"
+}
+
 apply plugin: 'java'
 apply plugin: 'kotlin'
 
@@ -34,3 +38,5 @@ compileKotlin {
 compileTestKotlin {
   kotlinOptions.jvmTarget = "1.8"
 }
+
+apply from: "bintray.gradle"
